<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MapsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@color/white_transparent"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/currentZoneText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/current_zone_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"/>

        <Button
            android:id="@+id/attackButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@color/red"
            android:text="@string/attack_button_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone" />
        <Button
            android:id="@+id/defendButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:text="@string/defend_button_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/timerButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/grey"
            android:text="@string/wait_button_text"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"
            android:ems="10"
            android:layout_margin="5dp"
            android:visibility="gone"
            />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</FrameLayout>